# wadmerge

./: AUTHORS  CMakeLists.txt  README  getopt.h  main.cpp  version.h.in  wad.cpp  wad.h  wadlumpptr.cpp  wadlumpptr.h  wadmerge.kdev4  wadmerge.spec  wadmerge.spec.in
doc/: README.md
man1/: wadmerge.1
